--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "crochet-citters",
+  "homepage": "https//SanjanaK1905.github.io/CrochetCitters/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
