--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "crochet-citters",
-  "homepage": "https//SanjanaK1905.github.io/CrochetCitters/",
+  "homepage": "https://SanjanaK1905.github.io/CrochetCitters/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -8,7 +8,9 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^19.1.0",
